--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="hero_left">
                 <h1>This Website is awesome</h1>
                 <p>this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</p>
-                <a>Sign up</a>
+                <a class="blutbtc">Sign up</a>
             </div>
             <div class="hero_right">
                 <div class="gray_image">
@@ -68,6 +68,18 @@
             <p class="p11">This is an inspiation quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that il looks nice.</p>
             <p class="p22">-Thor, God of Thunder</p>
         </div>
+    </div>
+    <div class="cta">
+        <div class="bluecta">
+            <div class="ctap">
+                <p class="p33">Call to action! it's time!</p>
+                <p class="p44">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <a class="blutbtc blues">Sign up</a>
+        </div>
+    </div>
+    <div class="footer">
+        <p class="lastp">Copyright &#9416; The Odin Project 2021</p>
     </div>
 </body>
 </html>
